--- a/my-app/package.json
+++ b/my-app/package.json
@@ -42,6 +42,7 @@
     "react-native-paper": "^4.9.2",
     "react-native-permissions": "^5.2.1",
     "react-native-reanimated": "~3.16.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
